--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^1.0.1
   firebase_core: ^1.0.1
   date_field: ^1.0.5
+  splashscreen: ^1.3.5
   
 
 dev_dependencies:
@@ -51,6 +52,8 @@ flutter:
      - icons/email.svg
      - icons/add_note.svg
      - icons/add_category.svg
+     - icons/welcome.svg
+     - img/hello1.png
   
 
   # The following line ensures that the Material Icons font is
